# AISCM-Final-Project

./: .env  .gitignore  README.md  agents.py  execute.ipynb  execute_llm_agent.ipynb  experiment.ipynb  model.py  params.py  pyproject.toml  single_agent.py  singleagents.py  supplier.ipynb
