[project]
name = "aiscm-final-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Utku",email = "utkuuguryagci07@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "mesa (>=3.4.1,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
